--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Ignore everything
+*
+
+# Don't blacklist files with extensions
+!*.*
+
+# Don't blacklist directories
+!*/
+
 # Prerequisites
 *.d
 
