--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,5 @@
+SONARQUBE_HOST_URL=<SONARQUBE_URL>
+SONARQUBE_PROJECT_KEY=<SONARQUBE_PROJECT_KEY>
+SONARQUBE_TOKEN=<SONARQUBE_TOKEN>
+
 MallocStackLogging=1
